// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CalculatorPage /> renders correctly with Sidebar and Calculator showing 1`] = `
<div
  className="calculatorPage"
>
  <Connect(Sidebar) />
  <Connect(Calculator) />
  <ToastContainer
    autoClose={3000}
    bodyClassName={null}
    className={null}
    closeButton={
      <CloseButton
        ariaLabel="close"
      />
    }
    closeOnClick={true}
    draggable={true}
    draggablePercent={80}
    hideProgressBar={false}
    newestOnTop={false}
    pauseOnFocusLoss={true}
    pauseOnHover={true}
    position="bottom-right"
    progressClassName={null}
    progressStyle={null}
    rtl={false}
    style={null}
    toastClassName={null}
    transition={[Function]}
  />
</div>
`;

exports[`<CalculatorPage /> renders correctly with only Calculator showing 1`] = `
<div
  className="calculatorPage"
>
  <Connect(Calculator) />
  <ToastContainer
    autoClose={3000}
    bodyClassName={null}
    className={null}
    closeButton={
      <CloseButton
        ariaLabel="close"
      />
    }
    closeOnClick={true}
    draggable={true}
    draggablePercent={80}
    hideProgressBar={false}
    newestOnTop={false}
    pauseOnFocusLoss={true}
    pauseOnHover={true}
    position="bottom-right"
    progressClassName={null}
    progressStyle={null}
    rtl={false}
    style={null}
    toastClassName={null}
    transition={[Function]}
  />
</div>
`;

exports[`<CalculatorPage /> renders correctly with only Sidebar showing 1`] = `
<div
  className="calculatorPage"
>
  <Connect(Sidebar) />
  <ToastContainer
    autoClose={3000}
    bodyClassName={null}
    className={null}
    closeButton={
      <CloseButton
        ariaLabel="close"
      />
    }
    closeOnClick={true}
    draggable={true}
    draggablePercent={80}
    hideProgressBar={false}
    newestOnTop={false}
    pauseOnFocusLoss={true}
    pauseOnHover={true}
    position="bottom-right"
    progressClassName={null}
    progressStyle={null}
    rtl={false}
    style={null}
    toastClassName={null}
    transition={[Function]}
  />
</div>
`;
